html/modules/themes/xartemplates/user-additionalstyles.xd: 	#  a quick fix for comments rendering (maybe should be disabled as default anyway html/themes/Xaraya_Classic/style/colstyle_green.css: 	#  tiny adjustment html/themes/Xaraya_Classic/style/colstyle_highcontrast.css: 	#  tiny adjustment html/themes/Xaraya_Classic/style/colstyle_orange.css: 	#  tiny adjustment html/themes/Xaraya_Classic/style/style.css: 	#  tiny adjustment

--- a/html/themes/Xaraya_Classic/style/colstyle_green.css
+++ b/html/themes/Xaraya_Classic/style/colstyle_green.css
@@ -15,8 +15,7 @@ h1, h2, h3, h4 { color: #336633; }
 
 .xar-mod-head {
     color: #336633;
-    background-color: #E2F0DF;
-    border-color: #336633;
+    background-position: 0px -220px;
 }
 
 th {
