--- a/html/themes/Xaraya_Classic/style/colstyle_highcontrast.css
+++ b/html/themes/Xaraya_Classic/style/colstyle_highcontrast.css
@@ -16,8 +16,7 @@ h1, h2, h3, h4 { color: #000000; }
 
 .xar-mod-head {
     color: #000000;
-    background-color: #EEEEEE;
-    border-color: #000000;
+    background-position: 0px -620px;
 }
 
 th {
