--- a/html/themes/Xaraya_Classic/style/colstyle_orange.css
+++ b/html/themes/Xaraya_Classic/style/colstyle_orange.css
@@ -15,8 +15,7 @@ h1, h2, h3, h4 { color: #996600; }
 
 .xar-mod-head {
     color: #7F5300;
-    background-color: #E7E2C6;
-    border-color: #7F5300;
+    background-position: 0px -420px;
 }
 
 th {
